--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "dependencies": {
     "@date-io/date-fns": "^3.2.1",
     "@emotion/react": "^11.14.0",
-    "@mui/lab": "^7.0.0-beta.13",
-    "@mui/x-date-pickers": "^8.5.2",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.1",
+    "@mui/lab": "^7.0.0-beta.13",
     "@mui/material": "^7.1.1",
+    "@mui/x-date-pickers": "^8.5.2",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-query": "^5.80.7",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.18.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2"
