--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/x-date-pickers": "^8.5.2",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-query": "^5.80.7",
+    "axios": "^1.10.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.18.1",
     "react": "^19.1.0",
